Fix : Responsive layout - Overflow scroll for Search Result table/Searchbar margin/Wordbreak in Search Result table

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -285,7 +285,7 @@ body{
     height: 100%;
     width: 100%;
     color: @search-link-color;
-    margin-top: 4px;
+    margin: 4px;
     padding: 0px 10px;
     text-decoration: none;
     vertical-align: top;
@@ -1602,6 +1602,7 @@ ul.unstyled{
     width: 100%;
     border: 1px solid #ddd;
     margin-top: 10px;
+    overflow: scroll;
 }
 
 .listview-table{
@@ -1644,6 +1645,7 @@ ul.unstyled{
         vertical-align: middle;
         width: 100%;
         display: inline-block;
+        word-break: normal;
     }
 }
 .listViewEntries .relatedListEntryValues .value{
